# ImplicitEMC

./: ImplicitEMC.cabal
src/Physics/: ImplicitEMC.hs
src/Physics/ImplicitEMC/: DiscreteSequence.hs  DiscreteSignal.hs  FDTD.hs  MaterialScene.hs  MathUtils.hs  NetCDF.hs  RectangularLattice.hs
src/Physics/ImplicitEMC/FDTD/: ExportNetCDF.hs  Parameters.hs  Render.hs  YeeLattice.hs
src/Physics/ImplicitEMC/Utils/: Trivia.hs
test/: TestNetCDF.hs  TestSimpleNetCDF.hs
