name:               ImplicitEMC
version:            0.0.0.1
synopsis:           ...
description:        ...
category:           Phisics
stability:          experimental
author:             Pavel Kretov <firegurafiku@gmail.com>
maintainer:         Pavel Kretov <firegurafiku@gmail.com>
license:            GPL-2
license-file:       LICENSE.txt
homepage:           https://github.com/firegurafiku/ImplicitEMC
bug-reports:        https://github.com/firegurafiku/ImplicitEMC/issues
build-type:         Simple
cabal-version:      >= 1.6
tested-with:        GHC == 7.6.3
extra-source-files: README.md

library
  hs-source-dirs:   src
  exposed-modules:  Physics.ImplicitEMC
  build-depends:    base        == 4.*,
                    implicit

