name:               ImplicitEMC
version:            0.0.0.1
synopsis:           ...
description:        ...
category:           Phisics
stability:          experimental
author:             Pavel Kretov <firegurafiku@gmail.com>
maintainer:         Pavel Kretov <firegurafiku@gmail.com>
license:            GPL-2
license-file:       LICENSE.txt
homepage:           https://github.com/firegurafiku/ImplicitEMC
bug-reports:        https://github.com/firegurafiku/ImplicitEMC/issues
build-type:         Simple
cabal-version:      >= 1.8
tested-with:        GHC == 7.6.3
extra-source-files: README.md

library
  hs-source-dirs:   src
  exposed-modules:  Physics.ImplicitEMC,
                    Physics.ImplicitEMC.Utils.Trivia,
                    Physics.ImplicitEMC.MathUtils,
                    Physics.ImplicitEMC.NetCDF,
                    Physics.ImplicitEMC.MaterialScene,
                    Physics.ImplicitEMC.DiscreteSequence,
                    Physics.ImplicitEMC.FDTD,
                    Physics.ImplicitEMC.FDTD.YeeLattice,
                    Physics.ImplicitEMC.FDTD.Parameters,
                    Physics.ImplicitEMC.FDTD.Render,
                    Physics.ImplicitEMC.FDTD.ExportNetCDF
  build-depends:    base        == 4.*,
                    containers,
                    hnetcdf,
                    hmatrix,
                    vector,
                    implicit

executable testNetCDF
  main-is:         test/TestNetCDF.hs
  build-depends:   base, vector, hmatrix, hnetcdf, ImplicitEMC

executable testNetCDF2
  main-is:         test/TestSimpleNetCDF.hs
  build-depends:   base, vector, hmatrix, hnetcdf, ImplicitEMC